blinken (4:16.08.0-0r1) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * New upstream release.

 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 29 Aug 2016 19:52:05 +0200

blinken (4:16.04.1-2) unstable; urgency=medium

  * Really remove the steve font.
    Thanks to Carlo Stemberger for checking (Closes: #813449)

 -- Maximiliano Curia <maxy@debian.org>  Wed, 25 May 2016 11:22:12 +0200

blinken (4:16.04.1-1) unstable; urgency=medium

  [ Maximiliano Curia ]
  * Avoid installing the steve font. (Closes: #813449)
  * Remove menu file and friends
  * New upstream release (15.12.2).
  * Add upstream metadata (DEP-12)
  * debian/control: Update Vcs-Browser and Vcs-Git fields

  [ Automatic packaging ]
  * Bump Standards-Version to 3.9.8
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Sun, 22 May 2016 10:18:51 +0200

blinken (4:15.12.0-1) experimental; urgency=medium

  * New upstream release (15.12.0).

 -- Maximiliano Curia <maxy@debian.org>  Mon, 01 Feb 2016 10:23:10 +0100

blinken (4:15.08.3-1) unstable; urgency=medium

  * New upstream release (15.08.3).

 -- Maximiliano Curia <maxy@debian.org>  Wed, 02 Dec 2015 12:39:12 +0100

blinken (4:15.08.2-1) unstable; urgency=medium

  * New upstream release (15.08.2).

 -- Maximiliano Curia <maxy@debian.org>  Fri, 16 Oct 2015 08:07:08 +0200

blinken (4:15.08.0-1) unstable; urgency=medium

  * New upstream release (15.04.0).
  * New upstream release (15.08.0).

 -- Maximiliano Curia <maxy@debian.org>  Sun, 06 Sep 2015 13:54:26 +0200

blinken (4:15.08.0-0ubuntu1) wily; urgency=medium

  * new upstream release

 -- Ubuntu <ubuntu@ip-10-170-33-178.ec2.internal>  Wed, 26 Aug 2015 16:12:34 +0100

blinken (4:15.07.90-0ubuntu1) wily; urgency=medium

  * New upstream release
  * new upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 08:56:02 +0100

blinken (4:15.04.2-0ubuntu1) wily; urgency=medium

  [ Scarlett Clark ]