@@ -1,5 +1,0 @@
-# Shipped in ttf-sjfonts
-./usr/share/blinken/fonts/steve.ttf
-
-# Describing the handling of the "steve" font
-./usr/share/blinken/README.packagers
