@@ -2,6 +2,12 @@ blinken (4:16.08.0-0r1) UNRELEASED; urgency=medium
 
   [ Pino Toscano ]
   * New upstream release.
+  * Stop forcing the local installation to debian/tmp, letting the package
+    directory as install place.
+    - manually remove only the files (i.e. the fonts and the README) that are
+      not needed
+    - remove blinken.install, no more used now
+    - remove not-installed file, no more useful now
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 29 Aug 2016 19:52:05 +0200
 
